# pickaladder

./: .dockerignore  .firebaserc  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  DESIGN.md  DESIGN_GUIDE.md  Dockerfile  Dockerfile.db  Makefile  PIPELINE_BEST_PRACTICES.md  README.md  REFACTOR.md  REPOSITORY_TEMPLATE.md  REQUIREMENTS.md  SECURITY.md  TEAMS_FEATURE.md  VERSION  admin_rendered.html  agent_readiness_report.txt  agents.md  all_files.txt  all_files_long.txt  all_files_recursive.txt  all_py_files.txt  app.py  community_rendered.html  database.py  debug_form.py  debug_test.py  docker-compose.beta.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  e2e_failure.txt  e2e_failure_2.txt  (+84 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  jules.yaml
.jules/: bolt.md  palette.md  sentinel.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: AUTH_VERIFICATION_REPORT.md  CONFIGURATION.md  DESIGN.md  FIREBASE_MIGRATION.md  REQUIREMENTS.md  SECURITY.md  VERSIONING.md  VERSION_SYNC_QUICKSTART.md  index.md
frontend/: package-lock.json
migrations/: 1_add_dark_mode_column.sql  2_add_profile_picture_thumbnail_column.sql  3_add_email_verified_column.sql  4_add_password_reset_columns.sql  5_add_profile_picture_path_columns.sql  6_add_friend_groups_tables.sql  7_rename_and_enhance_groups.sql  8_add_fields_to_group.sql  8_add_settings_table.sql
nginx/: Dockerfile  Dockerfile.prod  beta.conf  entrypoint.sh  nginx.conf  nginx.prod.conf  pickaladder
pickaladder/: __init__.py  config.py  constants.py  context_processors.py  db.py  error_handlers.py  errors.py  extensions.py  models.py  render_template.py  utils.py  (+1 more)
(+599 files in other folders)
