[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pickaladder"
version = "0.1.0"
description = "A pickleball ladder and tournament management application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.3.0",
    "firebase-admin==7.1.0",
    "flask==3.1.2",
    "flask-mail==0.10.0",
    "flask-wtf==1.2.2",
    "gunicorn==25.0.1",
    "imgur-python==0.2.4",
    "pillow==12.1.0",
    "pydantic==2.12.5",
    "types-pillow==10.2.0.20240822",
    "types-wtforms==3.2.1.20250809",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, pydocstyle, and isort.
select = ["E", "F", "W", "I", "UP", "PL"]

# Never enforce `E501` (line-too-long), handled by `format`.
# TODO: Refactor complex functions to resolve these ignores
ignore = ["E501", "PLR0911", "PLR0912", "PLR0915"]

[tool.ruff.lint.pydocstyle]
# Use the PEP 257 convention for docstring formatting.
convention = "pep257"

[tool.ruff.lint.mccabe]
# Set the maximum complexity to 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "bandit==1.9.3",
    "coverage==7.13.2",
    "faker==40.1.2",
    "mkdocs==1.6.1",
    "mock-firestore==0.11.0",
    "mypy==1.19.1",
    "pytest==8.3.4",
    "pytest-flask==1.3.0",
    "ruff==0.14.14",
]
